# mav-analysis

./: .gitignore  README.md  analysis.ipynb  pyproject.toml  submission_checklist.xlsx
analysis_utils/: graphing_utils.py
data/analysis_data/: daily_edge_attributes.parquet  daily_vertex_attributes.parquet
data/input_graph_data/: stop_lines_interpolated.parquet  stop_lines_uninterpolated.parquet
data/mav_gtfs/: stops.txt  trips.txt
mav_analysis/: align_schedule_to_graph.py  download_mav_scrape_data.py  feature_table_finalization.py  gather_graph_data.py  grapher.py  reproduce_preprocessing_steps.py
mav_analysis/config/: __init__.py  config.py
mav_analysis/graph_analyzer/: full_transit_graph_comparer.py
mav_analysis/grapher/: grapher.py  gtfs_complementary.html  line_shape_complementary.html  line_shape_map.html  line_shape_map_uninterpolated.html
mav_analysis/physical_routes_fetcher/: fetch_shape_routes.py
results/map_graph_visualizations/: gtfs_complementary.html  line_shape_complementary.html  line_shape_map.html  line_shape_map_uninterpolated.html
results/tables/: regression_table.html  regression_table_additional_controls.html  regression_table_linear_comparison.html  table_1_descriptive_stats.xlsx  table_2_christmas_period_distribution.xlsx  table_3_baseline_regression_table.html  table_3_baseline_regression_table.xlsx  table_4_pairwise_correlation.xlsx  table_5_regression_table_additional_controls.html  table_5_regression_table_additional_controls.xlsx  table_6_regression_table_linear_comparison.html  table_6_regression_table_linear_comparison.xlsx
(+16 files in other folders)
