[tool.poetry]
name = "mav-analysis"
version = "0.1.0"
description = ""
authors = ["Istvan Peter Jaray <istvanpeterjaray@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.2.1"
pyarrow = "^18.1.0"
igraph = "^0.11.8"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"
statsmodels = "^0.14.4"
scipy = "^1.14.1"
folium = "^0.19.2"
plotly-express = "^0.4.1"
geopandas = "^1.0.1"
polyline = "^2.0.2"
geopy = "^2.4.1"
tqdm = "^4.67.1"
logger = "^1.4"
pydantic = "^2.10.4"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
